# EV1_FINAL_ING_SOLUCIONES

./: .env  .gitignore  README.md  agente.ipynb  main.py  pyproject.toml  requirements.txt
agentes/: analista.py  auditor.py  redactor.py
config/: settings.py
herramientas/: buscador_web.py  lector_pdf.py
