[project]
name = "proyecto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "jupyterlab>=4.5.7",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-openai==0.1.7",
    "langchain-text-splitters==0.2.4",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
]
